# sdk-python

./: .gitignore  .gitignore.swp  README.md  buf.yaml  build.py  from-proto.py  pass_out  requirement.txt  requirements.txt
src/: README.md  pyproject.toml
src/google/type/: date.proto  dayofweek.proto  timeofday.proto
src/systemathics/apis/helpers/: channel_helpers.py  token_helpers.py
src/systemathics/apis/services/v1/: artifacts.proto  artifacts_pb2.py  artifacts_pb2_grpc.py  bars.proto  bollingerbands.proto  cma.proto  daily.proto  daily_bars.proto  daily_bollinger.proto  daily_cma.proto  daily_ema.proto  daily_macd.proto  daily_prices.proto  daily_rsi.proto  daily_sma.proto  daily_volatility.proto  daily_vwap.proto  dailybars.proto  dailysma.proto  dailyvolatility.proto  dividends.proto  ema.proto  identifier_mapping.proto  market_data.proto  marketdata.proto  memos.proto  raw.proto  sma.proto  splits.proto  static_data.proto  staticdata.proto  tick_bars.proto  tick_bollinger.proto  tick_cma.proto  tick_data.proto  tick_ema.proto  tick_raw.proto  tick_sma.proto  tick_vwap.proto  topologies.proto  (+1 more)
src/systemathics/apis/type/shared/v1/: action.proto  (+61 more)
src/systemathics/apis/type/v1/: action.proto  average.proto  constraints.proto  date_interval.proto  dateinterval.proto  field.proto  identifier.proto  mappings.proto  market_book_updates.proto  market_fields_updates.proto  marketbookupdates.proto  marketfieldsupdates.proto  memo.proto  side.proto  stream.proto  time_interval.proto  timeinterval.proto
src/systemathics/helpers/: channel_helpers.py  token_helpers.py
(+234 files in other folders)
